# swiftsc-analyzer

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs  security.rs
