[package]
name = "swiftsc-analyzer"
version = "1.0.2-beta"
edition = "2021"
authors = ["SwiftSC-Lang Contributors"]
description = "Static analysis tools for SwiftSC-Lang"
license = "MIT"
repository = "https://github.com/swiftsc-lang/swiftsc-analyzer"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
swiftsc-frontend = { path = "../swiftsc-compiler/frontend" }

[dev-dependencies]
